--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "plugin-react-to-vue",
 	"displayName": "plugin-react-to-vue",
 	"description": "a plugin react to vue",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"engines": {
 		"vscode": "^1.67.0"
 	},
@@ -17,9 +17,18 @@
 		"commands": [
 			{
 				"command": "plugin-react-to-vue.helloWorld",
-				"title": "Hello World"
+				"title": "react-to-vue"
 			}
-		]
+		],
+		"menus": {
+			"explorer/context": [
+			  {
+				"command": "plugin-react-to-vue.helloWorld",
+				"group": "navigation",
+				"when": "resourceFilename =~ /.jsx|.tsx/" 
+			  }
+			]
+		  }
 	},
 	"scripts": {
 		"vscode:prepublish": "yarn run compile",
@@ -29,6 +38,15 @@
 		"lint": "eslint src --ext ts",
 		"test": "node ./out/test/runTest.js"
 	},
+	"dependencies": {
+		"@babel/core": "^7.15.0",
+		"@babel/generator": "^7.15.0",
+		"@babel/preset-typescript": "^7.17.12",
+		"@babel/types": "^7.15.0",
+		"lodash": "^4.17.21",
+		"prettier": "2.0.0",
+		"traverse": "^0.6.6"
+	  },
 	"devDependencies": {
 		"@types/vscode": "^1.67.0",
 		"@types/glob": "^7.2.0",
@@ -40,6 +58,15 @@
 		"glob": "^8.0.1",
 		"mocha": "^9.2.2",
 		"typescript": "^4.6.4",
-		"@vscode/test-electron": "^2.1.3"
+		"@vscode/test-electron": "^2.1.3",
+		"@types/babel-generator": "^6.25.4",
+		"@types/babel-types": "^7.0.11",
+		"@types/babel__core": "^7.1.15",
+		"@types/lodash": "^4.14.172",
+		"@types/traverse": "^0.6.32",
+		"ts-node": "^10.7.0",
+		"tslint": "^5.17.0",
+		"tslint-config-prettier": "^1.18.0",
+		"tslint-config-standard": "^8.0.1"
 	}
 }
