--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "plugin-react-to-vue",
 	"displayName": "plugin-react-to-vue",
 	"description": "a plugin that converts react to vue",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"engines": {
 		"vscode": "^1.67.0"
 	},
 	"categories": [
 		"Other"
 	],
-	"icon": "./images/icon.jpg",
+	"icon": "images/icon.jpg",
 	"activationEvents": [
         "onCommand:plugin-react-to-vue.start"
 	],
@@ -71,6 +71,10 @@
 		"tslint-config-standard": "^8.0.1"
 	},
 	"publisher":"littlefourzhang",
+	"license": "SEE LICENSE IN LICENSE.txt",
+	"bugs": {
+		"url": "https://github.com/Ziazan/plugin-react-to-vue/issues"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Ziazan/plugin-react-to-vue"
