--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 		"watch": "tsc -watch -p ./",
 		"pretest": "yarn run compile && yarn run lint",
 		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
+		"test": "node ./out/test/runTest.js",
+		"test2": "ts-node ./src/test/index.test.ts"
 	},
 	"dependencies": {
 		"@babel/core": "^7.15.0",
