--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "vscode": "^1.67.0"
   },
   "categories": [
-    "Other"
+    "Other",
+	"Languages"
   ],
   "icon": "images/icon.jpg",
   "activationEvents": [
